Fixed horizontal scrolling on mobile.

--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ button a:hover {
 
 /* ---- styling for the body of the page ---- */
 body {
-	min-width: var(--minWidth);
 	background-color: var(--bg-color);
 	scroll-behavior: smooth;
 	background-image: url('images/background2.jpg');
@@ -666,14 +665,15 @@ img {
 }
 
 @media screen and (max-width: 1060px) {
-	#webPort .contained {
+	#webPort #contained {
 		grid-template-columns: 50% 50%;
 	}
 }
 
 @media screen and (max-width: 700px) {
-	#webPort .contained {
+	#webPort #contained {
 		grid-template-columns: 100%;
+		margin-top: 1em;
 	}
 }
 
